--- a/src/Integration.UnitTests/packages.config
+++ b/src/Integration.UnitTests/packages.config
@@ -36,4 +36,5 @@
   <package id="NuGet.VisualStudio" version="3.3.0" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="stdole" version="7.0.3300" targetFramework="net46" />
+  <package id="StrongNamer" version="0.0.3" targetFramework="net46" />
 </packages>
