--- a/src/Integration.UnitTests_2017/packages.config
+++ b/src/Integration.UnitTests_2017/packages.config
@@ -38,4 +38,5 @@
   <package id="NuGet.VisualStudio" version="3.3.0" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="stdole" version="7.0.3301" targetFramework="net46" />
+  <package id="StrongNamer" version="0.0.3" targetFramework="net46" />
 </packages>
