--- a/src/Integration/packages.config
+++ b/src/Integration/packages.config
@@ -28,4 +28,5 @@
   <package id="NuGet.VisualStudio" version="3.3.0" targetFramework="net46" />
   <package id="SonarAnalyzer.CSharp" version="5.10.0.1302" targetFramework="net46" developmentDependency="true" />
   <package id="stdole" version="7.0.3300" targetFramework="net46" />
+  <package id="StrongNamer" version="0.0.3" targetFramework="net46" />
 </packages>
