--- a/src/Integration_2017/packages.config
+++ b/src/Integration_2017/packages.config
@@ -30,4 +30,5 @@
   <package id="NuGet.VisualStudio" version="3.3.0" targetFramework="net46" />
   <package id="SonarAnalyzer.CSharp" version="1.20.1" targetFramework="net46" developmentDependency="true" />
   <package id="stdole" version="7.0.3301" targetFramework="net46" />
+  <package id="StrongNamer" version="0.0.3" targetFramework="net46" />
 </packages>
