--- a/src/Integration.UnitTests/Integration.UnitTests.csproj
+++ b/src/Integration.UnitTests/Integration.UnitTests.csproj
@@ -301,6 +301,9 @@
     <Compile Include="TeamExplorer\SonarQubePageTests.cs" />
     <Compile Include="TeamExplorer\TeamExplorerControllerTests.cs" />
     <Compile Include="TelemetryLoggerAccessorTests.cs" />
+    <Compile Include="Telemetry\TelemetryClientTests.cs" />
+    <Compile Include="Telemetry\TelemetryDataRepositoryTests.cs" />
+    <Compile Include="Telemetry\TelemetryManagerTests.cs" />
     <Compile Include="UriExtensionsTests.cs" />
     <Compile Include="MefServices\VsSessionHostTests.cs" />
     <Compile Include="VsShellUtilsTests.cs" />
