--- a/src/Integration/packages.config
+++ b/src/Integration/packages.config
@@ -5,7 +5,8 @@
   <package id="EnvDTE80" version="8.0.0" targetFramework="net46" />
   <package id="EnvDTE90" version="9.0.0" targetFramework="net46" />
   <package id="EnvDTE90a" version="9.0.0" targetFramework="net46" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.20.301151232" targetFramework="net46" />
+  <package id="Microsoft.Alm.Authentication" version="4.0.0.1" targetFramework="net46" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.13.8" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.ImageCatalog" version="14.3.25407" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Imaging" version="14.3.25407" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime" version="14.3.25407" targetFramework="net46" />
@@ -27,4 +28,5 @@
   <package id="NuGet.VisualStudio" version="3.3.0" targetFramework="net46" />
   <package id="SonarAnalyzer.CSharp" version="5.10.0.1302" targetFramework="net46" developmentDependency="true" />
   <package id="stdole" version="7.0.3300" targetFramework="net46" />
+  <package id="StrongNamer" version="0.0.3" targetFramework="net46" />
 </packages>
