--- a/src/Integration.Vsix.UnitTests/Integration.Vsix.UnitTests.csproj
+++ b/src/Integration.Vsix.UnitTests/Integration.Vsix.UnitTests.csproj
@@ -298,6 +298,7 @@
     <Compile Include="SonarAnalyzer\ConfigurableAnalyzerReference.cs" />
     <Compile Include="SonarAnalyzer\SonarAnalyzerManagerTests.cs" />
     <Compile Include="SonarAnalyzer\WorkspaceConfiguratorTests.cs" />
+    <Compile Include="SonarLintTracker\IssuesSnapshotTests.cs" />
     <Compile Include="SonarLintTracker\TaggerProviderTests.cs" />
     <Compile Include="SonarLintDaemonTests.cs" />
     <Compile Include="TcpUtilTests.cs" />
